Basic functions are working, but still cannot display task monitor.
git-svn-id: http://chianti.ucsd.edu/svn@23454 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/webservice-biomart-client/trunk/pom.xml
+++ b/core3/webservice-biomart-client/trunk/pom.xml
@@ -101,8 +101,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>work-api</artifactId>
-			<version>3.0.0-alpha2-SNAPSHOT</version>
+			<artifactId>work-swing-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>swing-application-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
 
