InvertSelectedNodesTask now uses the new RowSetAboutToBeChangedEvent and RowSetChangedEvent events.
git-svn-id: http://chianti.ucsd.edu/svn@23465 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/core-task-impl/trunk/pom.xml
+++ b/core3/core-task-impl/trunk/pom.xml
@@ -148,6 +148,10 @@
 			<version>1.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>event-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
-
 </project>
