Dependency added (for validation in IDE).
git-svn-id: http://chianti.ucsd.edu/svn@23478 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/linkout-impl/trunk/pom.xml
+++ b/core3/linkout-impl/trunk/pom.xml
@@ -69,6 +69,14 @@
 			<artifactId>service-util</artifactId>
 			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
+		
+		<!-- This is for Spring prop file -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>${spring.version}</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 </project>
