--- a/core3/webservice-impl/trunk/pom.xml
+++ b/core3/webservice-impl/trunk/pom.xml
@@ -126,6 +126,12 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>core-task-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
+		</dependency>
+
 
 		<!-- Testing -->
 		<dependency>
