--- a/core3/model-api/trunk/pom.xml
+++ b/core3/model-api/trunk/pom.xml
@@ -33,8 +33,8 @@
         <directory>src/main/resources</directory>
       </resource>
       <!--
-       | example additional resource entries, useful when building Eclipse RCP applications
-      -->
+	  | example additional resource entries, useful when building Eclipse RCP applications
+	-->
       <resource>
         <directory>.</directory>
         <includes>
@@ -50,9 +50,9 @@
         <artifactId>maven-pax-plugin</artifactId>
         <version>1.4</version>
         <!--
-           | enable improved OSGi compilation support for the bundle life-cycle.
-           | to switch back to the standard bundle life-cycle, move this setting
-           | down to the maven-bundle-plugin section
+            | enable improved OSGi compilation support for the bundle life-cycle.
+            | to switch back to the standard bundle life-cycle, move this setting
+            | down to the maven-bundle-plugin section
           -->
         <extensions>true</extensions>
       </plugin>
@@ -61,20 +61,20 @@
         <artifactId>maven-bundle-plugin</artifactId>
         <version>1.4.3</version>
         <!--
-         | the following instructions build a simple set of public/private classes into an OSGi bundle
-        -->
+            | the following instructions build a simple set of public/private classes into an OSGi bundle
+          -->
         <configuration>
           <instructions>
             <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
             <Bundle-Version>${pom.version}</Bundle-Version>
             <!--
-             | assume public classes are in the top package, and private classes are under ".internal"
-            -->
+		| assume public classes are in the top package, and private classes are under ".internal"
+              -->
             <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
             <Private-Package>${bundle.namespace}.internal.*</Private-Package>
             <!--
-             | each module can override these defaults in their osgi.bnd file
-            -->
+		| each module can override these defaults in their osgi.bnd file
+              -->
             <_include>-osgi.bnd</_include>
           </instructions>
         </configuration>
@@ -107,9 +107,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-	  <groupId>org.mockito</groupId>
-	  <artifactId>mockito-all</artifactId>
-	  <version>1.8.1</version> 
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.8.1</version> 
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -118,6 +118,11 @@
       <version>3.0.0-alpha2-SNAPSHOT</version>
       <type>test-jar</type>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.cytoscape</groupId>
+      <artifactId>service-util</artifactId>
+      <version>3.0.0-alpha2-SNAPSHOT</version>
     </dependency>
     
   </dependencies>
