--- a/core3/table-import-impl/trunk/pom.xml
+++ b/core3/table-import-impl/trunk/pom.xml
@@ -125,6 +125,11 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>io-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
     		<groupId>org.cytoscape</groupId>
     		<artifactId>swing-application-api</artifactId>
     		<version>1.0-SNAPSHOT</version>
