--- a/csplugins/trunk/ucsd/pwang/sample02/src/pom.xml
+++ b/csplugins/trunk/ucsd/pwang/sample02/src/pom.xml
@@ -90,7 +90,7 @@
       <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>plugin-api</artifactId>
-      <version>3.0.0-alpha1</version>
+      <version>3.0.0-alpha2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
