--- a/core3/splash/trunk/pom.xml
+++ b/core3/splash/trunk/pom.xml
@@ -6,78 +6,77 @@
 	<parent>
 		<artifactId>parent</artifactId>
 		<groupId>org.cytoscape</groupId>
-		<version>1.0-SNAPSHOT</version>
+		<version>3.0.0-alpha4-SNAPSHOT</version>
 	</parent>
 
 	<properties>
 		<bundle.symbolicName>org.cytoscape.splash</bundle.symbolicName>
 		<bundle.namespace>org.cytoscape.splash</bundle.namespace>
-		<org.ops4j.pax.runner.scanner.pom.startLevel>1</org.ops4j.pax.runner.scanner.pom.startLevel>
-		<org.ops4j.pax.runner.scanner.bundle.startLevel>1</org.ops4j.pax.runner.scanner.bundle.startLevel>
-		<org.ops4j.pax.runner.scanner.file.startLevel>1</org.ops4j.pax.runner.scanner.file.startLevel>
-		<org.ops4j.pax.runner.scanner.dir.startLevel>1</org.ops4j.pax.runner.scanner.dir.startLevel>
-		<org.ops4j.pax.runner.scanner.obr.startLevel>1</org.ops4j.pax.runner.scanner.obr.startLevel>
-		<org.ops4j.pax.runner.scanner.pom.startlevel>2</org.ops4j.pax.runner.scanner.pom.startlevel>
-		<org.ops4j.pax.runner.scanner.bundle.startlevel>2</org.ops4j.pax.runner.scanner.bundle.startlevel>
-		<org.ops4j.pax.runner.scanner.file.startlevel>2</org.ops4j.pax.runner.scanner.file.startlevel>
-		<org.ops4j.pax.runner.scanner.dir.startlevel>2</org.ops4j.pax.runner.scanner.dir.startlevel>
-		<org.ops4j.pax.runner.scanner.obr.startlevel>2</org.ops4j.pax.runner.scanner.obr.startlevel>
 	</properties>
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
 	<artifactId>splash</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>3.0.0-alpha1-SNAPSHOT</version>
 
 	<name>${bundle.symbolicName}</name>
 
 	<packaging>bundle</packaging>
 
 	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-			</resource>
-			<!-- | example additional resource entries, useful when building Eclipse 
-				RCP applications -->
-			<resource>
-				<directory>.</directory>
-				<includes>
-					<include>plugin.xml</include>
-					<include>plugin.properties</include>
-					<include>icons/**</include>
-				</includes>
-			</resource>
-		</resources>
+
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+
 		<plugins>
 			<plugin>
 				<groupId>org.ops4j</groupId>
 				<artifactId>maven-pax-plugin</artifactId>
 				<version>1.4</version>
-				<!-- | enable improved OSGi compilation support for the bundle life-cycle. 
-					| to switch back to the standard bundle life-cycle, move this setting | down 
-					to the maven-bundle-plugin section -->
 				<extensions>true</extensions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
 				<version>1.4.3</version>
-				<!-- | the following instructions build a simple set of public/private 
-					classes into an OSGi bundle -->
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
 						<Bundle-Version>${pom.version}</Bundle-Version>
-						<!-- | assume public classes are in the top package, and private classes 
-							are under ".internal" -->
 						<Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
 						<Private-Package>${bundle.namespace}.internal.*</Private-Package>
-						<!-- | each module can override these defaults in their osgi.bnd file -->
 						<_include>-osgi.bnd</_include>
 					</instructions>
 				</configuration>
 			</plugin>
+        <!-- Used to create the splash and credit screens. 
+             The rasterizing needs to happen after the svg files
+             have been copied and filtered so that the version
+             number is correct.  -->
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>batik-maven-plugin</artifactId>
+          <version>1.0-beta-1</version>
+          <configuration>
+            <srcDir>${project.build.directory}/classes/images/versioned-svg</srcDir>
+            <destDir>${project.build.directory}/classes/images</destDir>
+          </configuration>
+          <executions>
+            <execution>
+              <!-- just needs to happen after resources are copied -->
+              <phase>compile</phase>
+              <goals>
+                <goal>rasterize</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
+
 		</plugins>
 	</build>
 
