--- a/csplugins/trunk/ucsd/pwang/sample02/src/pom.xml
+++ b/csplugins/trunk/ucsd/pwang/sample02/src/pom.xml
@@ -95,7 +95,7 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>core-task-api</artifactId>
-      <version>3.0.0-alpha1</version>
+      <version>3.0.0-alpha2-SNAPSHOT</version>
     </dependency>
   
   
