--- a/core3/splash/trunk/pom.xml
+++ b/core3/splash/trunk/pom.xml
@@ -42,14 +42,13 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>1.4.3</version>
+				<version>2.1.0</version>
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
 						<Bundle-Version>${pom.version}</Bundle-Version>
-						<Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
-						<Private-Package>${bundle.namespace}.internal.*</Private-Package>
 						<_include>-osgi.bnd</_include>
+						<Include-Resource>${project.build.directory}/classes/resources</Include-Resource>
 					</instructions>
 				</configuration>
 			</plugin>
@@ -62,8 +61,8 @@
           <artifactId>batik-maven-plugin</artifactId>
           <version>1.0-beta-1</version>
           <configuration>
-            <srcDir>${project.build.directory}/classes/images/versioned-svg</srcDir>
-            <destDir>${project.build.directory}/classes/images</destDir>
+            <srcDir>${project.build.directory}/classes/resources/images/versioned-svg</srcDir>
+            <destDir>${project.build.directory}/classes/resources/images</destDir>
           </configuration>
           <executions>
             <execution>
@@ -75,8 +74,6 @@
             </execution>
           </executions>
         </plugin>
-
-
 		</plugins>
 	</build>
 
@@ -85,11 +82,13 @@
 			<groupId>org.osgi</groupId>
 			<artifactId>osgi_R4_core</artifactId>
 			<version>1.0</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.osgi</groupId>
 			<artifactId>osgi_R4_compendium</artifactId>
 			<version>1.0</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
