Mapping function implemented.
git-svn-id: http://chianti.ucsd.edu/svn@23614 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/webservice-biomart-client/trunk/pom.xml
+++ b/core3/webservice-biomart-client/trunk/pom.xml
@@ -82,7 +82,7 @@
 						<Bundle-Version>${pom.version}</Bundle-Version>
 						<!-- | assume public classes are in the top package, and private classes 
 							are under ".internal" -->
-						
+
 						<!-- | each module can override these defaults in their osgi.bnd file -->
 						<_include>-osgi.bnd</_include>
 					</instructions>
@@ -108,6 +108,11 @@
 			<groupId>org.cytoscape</groupId>
 			<artifactId>swing-application-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>core-task-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
 
 
