--- a/core3/taglets/trunk/pom.xml
+++ b/core3/taglets/trunk/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.cytoscape</groupId>
   <artifactId>taglets</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>3.0.0-alpha1</version>
   <packaging>jar</packaging>
 
   <name>Cytoscape Documentation Taglets</name>
@@ -14,9 +13,9 @@
   </properties>
 
   <scm>
-    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/taglets/trunk</connection>
-    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/taglets/trunk</developerConnection>
-    <url>http://chianti.ucsd.edu/svn/core3/taglets/trunk</url>
+    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/taglets/tags/taglets-3.0.0-alpha1</connection>
+    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/taglets/tags/taglets-3.0.0-alpha1</developerConnection>
+    <url>http://chianti.ucsd.edu/svn/core3/taglets/tags/taglets-3.0.0-alpha1</url>
   </scm>
 
   <dependencies>
