--- a/core3/taglets/trunk/pom.xml
+++ b/core3/taglets/trunk/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>org.cytoscape</groupId>
   <artifactId>taglets</artifactId>
-  <version>3.0.0-alpha1</version>
+  <version>3.0.0-alpha2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Cytoscape Documentation Taglets</name>
@@ -13,9 +13,9 @@
   </properties>
 
   <scm>
-    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/taglets/tags/taglets-3.0.0-alpha1</connection>
-    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/taglets/tags/taglets-3.0.0-alpha1</developerConnection>
-    <url>http://chianti.ucsd.edu/svn/core3/taglets/tags/taglets-3.0.0-alpha1</url>
+    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/taglets/trunk</connection>
+    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/taglets/trunk</developerConnection>
+    <url>http://chianti.ucsd.edu/svn/core3/taglets/trunk</url>
   </scm>
 
   <dependencies>
