--- a/cytoscape/trunk/corelibs/render.stateful/pom.xml
+++ b/cytoscape/trunk/corelibs/render.stateful/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>cytoscape.corelibs</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.1-beta1</version>
+    <version>2.8.1-beta2-SNAPSHOT</version>
   </parent>
 
   <artifactId>render-stateful</artifactId>
