--- a/cytoscape/trunk/coreplugins/EquationFunctions/pom.xml
+++ b/cytoscape/trunk/coreplugins/EquationFunctions/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>cytoscape.coreplugins</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.1-beta1</version>
+    <version>2.8.1-beta2-SNAPSHOT</version>
   </parent>
 
   <artifactId>equation-functions</artifactId>
