--- a/core3/presentation-api/trunk/pom.xml
+++ b/core3/presentation-api/trunk/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>parent</artifactId>
 		<groupId>org.cytoscape</groupId>
-		<version>3.0.0-alpha3</version>
+		<version>3.0.0-alpha4</version>
 	</parent>
 
 	<properties>
@@ -15,16 +15,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
 	<artifactId>presentation-api</artifactId>
-	<version>3.0.0-alpha2-SNAPSHOT</version>
+	<version>3.0.0-alpha2</version>
 
 	<name>${bundle.symbolicName} [${bundle.namespace}]</name>
 
 	<packaging>bundle</packaging>
 
 	<scm>
-		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/presentation-api/trunk</connection>
-		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/presentation-api/trunk</developerConnection>
-		<url>http://chianti.ucsd.edu/svn/core3/presentation-api/trunk</url>
+		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/presentation-api/tags/presentation-api-3.0.0-alpha2</connection>
+		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/presentation-api/tags/presentation-api-3.0.0-alpha2</developerConnection>
+		<url>http://chianti.ucsd.edu/svn/core3/presentation-api/tags/presentation-api-3.0.0-alpha2</url>
 	</scm>
 
 	<build>
@@ -90,7 +90,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>viewmodel-api</artifactId>
-			<version>3.0.0-alpha3-SNAPSHOT</version>
+			<version>3.0.0-alpha3</version>
 		</dependency>
 
 		<!-- For Testing -->
