[maven-release-plugin] prepare release session-api-3.0.0-alpha2
git-svn-id: http://chianti.ucsd.edu/svn@23702 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/session-api/trunk/pom.xml
+++ b/core3/session-api/trunk/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
 		<artifactId>parent</artifactId>
@@ -16,16 +15,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
 	<artifactId>session-api</artifactId>
-	<version>3.0.0-alpha2-SNAPSHOT</version>
+	<version>3.0.0-alpha2</version>
 
 	<name>${bundle.symbolicName}</name>
 
 	<packaging>bundle</packaging>
 
 	<scm>
-		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/session-api/trunk</connection>
-		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/session-api/trunk</developerConnection>
-		<url>http://chianti.ucsd.edu/svn/core3/session-api/trunk</url>
+		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/session-api/tags/session-api-3.0.0-alpha2</connection>
+		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/session-api/tags/session-api-3.0.0-alpha2</developerConnection>
+		<url>http://chianti.ucsd.edu/svn/core3/session-api/tags/session-api-3.0.0-alpha2</url>
 	</scm>
 
 	<repositories>
