--- a/core3/util-intr/trunk/pom.xml
+++ b/core3/util-intr/trunk/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <parent>
     <groupId>org.cytoscape</groupId>
@@ -15,7 +15,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cytoscape</groupId>
   <artifactId>util-intr</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>3.0.0-alpha1</version>
 
   <name>${bundle.symbolicName}</name>
 
@@ -103,4 +103,10 @@
     </plugins>
   </build>
 
+
+  <scm>
+    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/parent/tags/util-intr-3.0.0-alpha1</connection>
+    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/parent/tags/util-intr-3.0.0-alpha1</developerConnection>
+    <url>http://chianti.ucsd.edu/svn/core3/parent/tags/util-intr-3.0.0-alpha1</url>
+  </scm>
 </project>
