--- a/core3/util-intr/trunk/pom.xml
+++ b/core3/util-intr/trunk/pom.xml
@@ -15,7 +15,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cytoscape</groupId>
   <artifactId>util-intr</artifactId>
-  <version>3.0.0-alpha1</version>
+  <version>3.0.0-alpha2-SNAPSHOT</version>
 
   <name>${bundle.symbolicName}</name>
 
