--- a/core3/core-task-api/trunk/pom.xml
+++ b/core3/core-task-api/trunk/pom.xml
@@ -15,16 +15,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
 	<artifactId>core-task-api</artifactId>
-	<version>3.0.0-alpha2</version>
+	<version>3.0.0-alpha3-SNAPSHOT</version>
 
 	<name>${bundle.symbolicName}</name>
 
 	<packaging>bundle</packaging>
 
 	<scm>
-		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/core-task-api/tags/core-task-api-3.0.0-alpha2</connection>
-		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/core-task-api/tags/core-task-api-3.0.0-alpha2</developerConnection>
-		<url>http://chianti.ucsd.edu/svn/core3/core-task-api/tags/core-task-api-3.0.0-alpha2</url>
+		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/core-task-api/trunk</connection>
+		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/core-task-api/trunk</developerConnection>
+		<url>http://chianti.ucsd.edu/svn/core3/core-task-api/trunk</url>
 	</scm>
 
 	<repositories>
