--- a/core3/spacial/trunk/pom.xml
+++ b/core3/spacial/trunk/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>org.cytoscape</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>3.0.0-alpha4</version>
   </parent>
 
   <properties>
@@ -20,6 +20,12 @@
   <name>${bundle.symbolicName}</name>
 
   <packaging>bundle</packaging>
+
+    <scm>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/spacial/trunk</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/spacial/trunk</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/spacial/trunk</url>
+    </scm>
 
   <repositories>
       <!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
@@ -107,7 +113,7 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>util-intr</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha1</version>
     </dependency>
   </dependencies>
 
