--- a/core3/layout-api/trunk/pom.xml
+++ b/core3/layout-api/trunk/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.cytoscape</groupId>
     <artifactId>parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>3.0.0-alpha4</version>
   </parent>
 
   <properties>
@@ -18,6 +18,12 @@
   <version>1.0-SNAPSHOT</version>
 
   <name>${bundle.symbolicName}</name>
+
+    <scm>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/layout-api/trunk</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/layout-api/trunk</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/layout-api/trunk</url>
+    </scm>
 
   <packaging>bundle</packaging>
 
@@ -75,12 +81,12 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>presentation-api</artifactId>
-			<version>3.0.0-alpha2-SNAPSHOT</version>
+			<version>3.0.0-alpha2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>core-task-api</artifactId>
-			<version>3.0.0-alpha2-SNAPSHOT</version>
+			<version>3.0.0-alpha2</version>
 		</dependency>
 	</dependencies>
 </project>
