--- a/core3/layout-api/trunk/pom.xml
+++ b/core3/layout-api/trunk/pom.xml
@@ -15,14 +15,14 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cytoscape</groupId>
   <artifactId>layout-api</artifactId>
-  <version>3.0.0-alpha1</version>
+  <version>3.0.0-alpha2-SNAPSHOT</version>
 
   <name>${bundle.symbolicName}</name>
 
     <scm>
-        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/layout-api/tags/layout-api-3.0.0-alpha1</connection>
-        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/layout-api/tags/layout-api-3.0.0-alpha1</developerConnection>
-        <url>http://chianti.ucsd.edu/svn/core3/layout-api/tags/layout-api-3.0.0-alpha1</url>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/layout-api/trunk</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/layout-api/trunk</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/layout-api/trunk</url>
     </scm>
 
   <packaging>bundle</packaging>
