preparing for release
git-svn-id: http://chianti.ucsd.edu/svn@23736 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/swing-application-api/trunk/pom.xml
+++ b/core3/swing-application-api/trunk/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.cytoscape</groupId>
 		<artifactId>parent</artifactId>
-		<version>3.0.0-alpha4-SNAPSHOT</version>
+		<version>3.0.0-alpha4</version>
 	</parent>
 
 	<properties>
@@ -65,7 +65,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>session-api</artifactId>
-			<version>3.0.0-alpha2-SNAPSHOT</version>
+			<version>3.0.0-alpha2</version>
 		</dependency>
 		
 	</dependencies>
