--- a/core3/swing-application-api/trunk/pom.xml
+++ b/core3/swing-application-api/trunk/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<groupId>org.cytoscape</groupId>
 		<artifactId>parent</artifactId>
@@ -16,14 +14,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
 	<artifactId>swing-application-api</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>3.0.0-alpha1</version>
 	<name>Cytoscape Swing Application API</name>
 	<packaging>bundle</packaging>
 
 	<scm>
-		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/swing-application-api/trunk</connection>
-		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/swing-application-api/trunk</developerConnection>
-		<url>http://chianti.ucsd.edu/svn/core3/swing-application-api/trunk</url>
+		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/swing-application-api/tags/swing-application-api-3.0.0-alpha1</connection>
+		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/swing-application-api/tags/swing-application-api-3.0.0-alpha1</developerConnection>
+		<url>http://chianti.ucsd.edu/svn/core3/swing-application-api/tags/swing-application-api-3.0.0-alpha1</url>
 	</scm>
 
 	<build>
