preparing for release
git-svn-id: http://chianti.ucsd.edu/svn@23747 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/default-mappingcalculators/trunk/pom.xml
+++ b/core3/default-mappingcalculators/trunk/pom.xml
@@ -23,6 +23,13 @@
 
 	<packaging>bundle</packaging>
 
+    <scm>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/default-mappingcalculators/trunk</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/default-mappingcalculators/trunk</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/default-mappingcalculators/trunk</url>
+    </scm>
+
+
 	<build>
 		<resources>
 			<resource>
