--- a/core3/default-mappingcalculators/trunk/pom.xml
+++ b/core3/default-mappingcalculators/trunk/pom.xml
@@ -15,16 +15,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
 	<artifactId>default-mappings</artifactId>
-	<version>3.0.0-alpha1</version>
+	<version>3.0.0-alpha2-SNAPSHOT</version>
 
 	<name>${bundle.symbolicName}</name>
 
 	<packaging>bundle</packaging>
 
     <scm>
-        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/default-mappingcalculators/tags/default-mappings-3.0.0-alpha1</connection>
-        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/default-mappingcalculators/tags/default-mappings-3.0.0-alpha1</developerConnection>
-        <url>http://chianti.ucsd.edu/svn/core3/default-mappingcalculators/tags/default-mappings-3.0.0-alpha1</url>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/default-mappingcalculators/trunk</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/default-mappingcalculators/trunk</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/default-mappingcalculators/trunk</url>
     </scm>
 
 
