preparing for release
git-svn-id: http://chianti.ucsd.edu/svn@23752 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/math-xform/trunk/pom.xml
+++ b/core3/math-xform/trunk/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>org.cytoscape</groupId>
     <artifactId>parent</artifactId>
-    <version>3.0.0-alpha3</version>
+    <version>3.0.0-alpha4</version>
   </parent>
 
   <properties>
@@ -18,6 +18,12 @@
   <name>${bundle.symbolicName}</name>
 
   <packaging>bundle</packaging>
+
+    <scm>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/math-xform/trunk</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/math-xform/trunk</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/math-xform/trunk</url>
+    </scm>
 
   <repositories>
       <!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
