--- a/core3/math-xform/trunk/pom.xml
+++ b/core3/math-xform/trunk/pom.xml
@@ -13,16 +13,16 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cytoscape</groupId>
   <artifactId>math-xform</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>3.0.0-alpha1</version>
 
   <name>${bundle.symbolicName}</name>
 
   <packaging>bundle</packaging>
 
     <scm>
-        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/math-xform/trunk</connection>
-        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/math-xform/trunk</developerConnection>
-        <url>http://chianti.ucsd.edu/svn/core3/math-xform/trunk</url>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/math-xform/tags/math-xform-3.0.0-alpha1</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/math-xform/tags/math-xform-3.0.0-alpha1</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/math-xform/tags/math-xform-3.0.0-alpha1</url>
     </scm>
 
   <repositories>
