updated to snapshots for model-api
git-svn-id: http://chianti.ucsd.edu/svn@23915 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/model-impl/trunk/pom.xml
+++ b/core3/model-impl/trunk/pom.xml
@@ -74,13 +74,13 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>model-api</artifactId>
-			<version>3.0.0-alpha2</version>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>model-api</artifactId>
-			<version>3.0.0-alpha2</version>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
