--- a/core3/work-swing-impl/trunk/it/pom.xml
+++ b/core3/work-swing-impl/trunk/it/pom.xml
@@ -106,7 +106,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>integration-test-support</artifactId>
-			<version>3.0.0-alpha3-SNAPSHOT</version>
+			<version>3.0.0-alpha3</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
